# live-guitar-detector

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
deploy/helm/guitar-detect/: Chart.yaml  values.local.yaml  values.yaml
deploy/helm/guitar-detect/templates/: _helpers.tpl  gateway-deployment.yaml  gateway-service.yaml  inference-deployment.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  redis.yaml
deploy/k3s/: README.md  install-mkcert-cert.sh  install-registry.sh  label-nodes.sh  smoke-test.sh
docs/: BENCHMARKS.md  CLASSIFIER.md  DEPLOYMENT.md  DEVELOPMENT.md  E2E_CHECKLIST.md  TROUBLESHOOTING.md  prompts.md
docs/plans/: 2026-05-19-guitar-detection-system.md
services/frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
services/frontend/src/: App.tsx  main.tsx
services/frontend/src/api/: config.ts  session.test.ts  session.ts  webrtc.test.ts  webrtc.ts
services/frontend/src/components/: CameraPicker.tsx  DebugPanel.tsx  GalleryFab.test.tsx  GalleryFab.tsx  GalleryPanel.test.tsx  GalleryPanel.tsx  HUD.test.tsx  HUD.tsx  VideoStage.tsx
services/frontend/src/hooks/: useCamera.test.ts  useCamera.ts  useDetections.test.ts  useDetections.ts  useGallery.test.ts  useGallery.ts  useMetrics.test.ts  useMetrics.ts  useWebRTC.test.ts  useWebRTC.ts
services/frontend/src/lib/: bbox.test.ts  bbox.ts
services/frontend/src/types/: detection.ts
services/frontend/tests/: components.smoke.test.tsx  setup.ts  smoke.test.tsx
services/gateway/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
services/gateway/app/: __init__.py  config.py  main.py  models.py  redis_io.py  session.py  webrtc.py  websocket.py
services/gateway/tests/: conftest.py  test_api.py  test_health.py  test_redis_io.py  test_session.py  test_webrtc.py  test_websocket.py
services/inference-worker/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/inference-worker/app/: __init__.py  classifier.py  config.py  consumer.py  detector.py  main.py  openvino_runtime.py  pipeline.py  probe_classifier.py  prompts.py  siglip_probe_classifier.py  tracks.py  voting.py  webcam_demo.py
services/inference-worker/scripts/: README.md  TRAIN_PROBE.md  benchmark.py  download_models.py  make_synthetic_fixtures.py  train_probe.py  webcam_demo.py
services/inference-worker/tests/: conftest.py  test_classifier.py  test_consumer.py  test_detector.py  test_openvino_runtime.py  test_pipeline.py  test_probe_classifier.py  test_prompts.py  test_tracks.py  test_voting.py
services/inference-worker/tests/fixtures/: prompts_minimal.yaml
services/inference-worker/tests/fixtures/images/: README.md
services/inference-worker/tests/integration/: harness.py
