# Root workspace-level tooling config.
#
# This file intentionally does NOT define [project] metadata — the repo root is
# not an installable package. Each service under services/ owns its own
# pyproject.toml with its own deps and packaging config, but inherits the
# style/format defaults declared here (line length 100, target-version py311).

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long — formatter handles wrapping
]

[tool.ruff.lint.isort]
# Each service ships its own top-level `app` package; treat it as first-party
# everywhere so test files group their imports correctly.
known-first-party = ["app"]

[tool.ruff.format]
# Defaults: double quotes, preserve magic trailing commas, LF line endings.

[tool.black]
# Kept for IDE compatibility. Pre-commit uses ruff-format as the canonical
# formatter; this block ensures editors that invoke black still match style.
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["services"]
addopts = "-ra --strict-markers"
# `auto` lets async tests omit `@pytest.mark.asyncio`. Safe for the worker's
# sync tests — pytest-asyncio only intercepts coroutines, sync functions are
# untouched.
asyncio_mode = "auto"
markers = [
    "requires_model: test needs model weights downloaded locally",
    "requires_real_fixtures: test needs real guitar fixture images (not synthetic placeholders)",
    "requires_aiortc_peer: test needs a live aiortc WebRTC peer",
]
