[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-detect-gateway"
version = "0.1.0"
description = "Gateway: FastAPI server with WebRTC ingest + WS detection forwarding."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.110,<0.120",
    "uvicorn[standard]>=0.27,<0.40",
    "aiortc>=1.9,<2",
    "av>=11,<13",
    "redis>=5.0,<6",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "loguru>=0.7,<1",
    "opencv-python-headless>=4.10,<5",
    "numpy>=1.26,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "httpx>=0.27,<1",
    "fakeredis>=2.21,<3",
]

[tool.setuptools.packages.find]
include = ["app", "app.*"]
exclude = ["tests*"]
