[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-detect-inference-worker"
version = "0.1.0"
description = "Inference worker: YOLO detection + MobileCLIP classification over Redis Streams."
requires-python = ">=3.11,<3.12"
dependencies = [
    "ultralytics>=8.3,<8.4",
    "open-clip-torch>=2.24,<3",
    "openvino>=2024.4,<2025",
    "opencv-python-headless>=4.10,<5",
    "numpy>=1.26,<2",
    "redis>=5.0,<6",
    "pyyaml>=6,<7",
    "loguru>=0.7,<1",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "fakeredis>=2.21,<3",
]

[tool.setuptools.packages.find]
include = ["app", "app.*"]
exclude = ["tests*"]
