[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-detect-inference-worker"
version = "0.1.0"
description = "Inference worker: YOLO detection + MobileCLIP classification over Redis Streams."
requires-python = ">=3.11,<3.12"
dependencies = [
    "ultralytics>=8.3,<8.4",
    # ByteTrack's hungarian-assignment dependency. Not declared by
    # ultralytics; without it the first call to `model.track(...)` performs
    # a pip auto-install at runtime, which we don't want in production.
    "lap>=0.5.12,<1",
    "open-clip-torch>=2.24,<3",
    # Needed by SigLIPProbeClassifier (CLASSIFIER_MODE=siglip_probe) to
    # load google/siglip2-base-patch16-256 via AutoModel/AutoProcessor.
    # Could be moved to an optional extra if the production build never
    # ships the SigLIP path.
    "transformers>=4.45,<5",
    "openvino>=2024.4,<2025",
    "opencv-python-headless>=4.10,<5",
    "numpy>=1.26,<2",
    "redis>=5.0,<6",
    "pyyaml>=6,<7",
    "loguru>=0.7,<1",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "fakeredis>=2.21,<3",
    # Integration harness (tests/integration/harness.py) talks to the running
    # gateway over HTTP + WS. Bundled into the dev extra so the worker's
    # Dockerfile.dev picks them up without a separate install step.
    "httpx>=0.27,<1",
    "websockets>=13,<15",
]
# Only needed by scripts/download_models.py to export PyTorch -> ONNX -> IR.
# Not required at inference runtime; install with `pip install -e .[export]`
# before running the export script.
export = [
    "onnx>=1.17,<2",
    "onnxscript>=0.1,<1",
]

[tool.setuptools.packages.find]
include = ["app", "app.*"]
exclude = ["tests*"]
